@@ -193,9 +193,9 @@ clearlooks_style_draw_shadow (DRAW_ARGS)
 
 		gtk_style_apply_default_background (style, window, TRUE, state_type,
 		                                    area, x, y, width, height);
-		
-		STYLE_FUNCTION (draw_statusbar) (cr, colors, &params,
-		                                 x, y, width, height);
+		if (shadow_type != GTK_SHADOW_NONE)
+			STYLE_FUNCTION (draw_statusbar) (cr, colors, &params,
+			                                 x, y, width, height);
 	}
 	else if (DETAIL ("frame"))
 	{
